internal/gocore: add parsing test for 1.11 core
Change-Id: I927c8e28686608fa2e775a741f17e8de1eff8811
Reviewed-on: https://go-review.googlesource.com/131375
Reviewed-by: Hyang-Ah Hana Kim <hyangah@gmail.com>

--- a/internal/gocore/testdata/README
+++ b/internal/gocore/testdata/README
@@ -14,3 +14,4 @@ here so the core dump reader can find the executable using this
 testdata directory as the base directory.
 
 core1.10 is produced in the same way, except using go1.10.0.
+core1.11 is produced in the same way, except using go1.11.0.
