internal/gocore: update to handle 1.12 core files
Just a few adjustments to handle runtime changes.

Use zip files for test data so we don't use so much
disk space for large core files. See golang/go#28081.

Fixes golang/go#30631

Change-Id: I6a11aae56e715540fc320cbe70e426eeafa2f64d
Reviewed-on: https://go-review.googlesource.com/c/debug/+/175497
Run-TryBot: Hyang-Ah Hana Kim <hyangah@gmail.com>
TryBot-Result: Gobot Gobot <gobot@golang.org>
Reviewed-by: Hyang-Ah Hana Kim <hyangah@gmail.com>

--- a/internal/gocore/testdata/README
+++ b/internal/gocore/testdata/README
@@ -15,3 +15,18 @@ testdata directory as the base directory.
 
 core1.10 is produced in the same way, except using go1.10.0.
 core1.11 is produced in the same way, except using go1.11.0.
+
+
+steps for subsequent versions:
+
+mkdir /tmp/coretest
+cd /tmp/coretest
+rm -fr *   // in case there's old junk there
+cat the above program into test.go
+go build test.go
+ulimit -c unlimited
+GOTRACEBACK=crash ./test
+zip 1.12.zip /tmp/coretest/core /tmp/coretest/test  // use your version number
+
+Then move the 1.12.zip to this directory.
+Add a new test to TestVersions in ../gocore_test.go.
